--- a/4.manipulacion_datos_pandas/data_pandas.ipynb
+++ b/4.manipulacion_datos_pandas/data_pandas.ipynb
@@ -4372,7 +4372,7 @@
     "<br>\n",
     "<h3>Ejemplo 1</h3>\n",
     "\n",
-    "<b><i>data.frame</b></i> con las variables <code>Departamento, Dep, Depmun, Municipio, Superficie y Poblacion</code> que incluye todos los municipios de los departamentos de Antioquia y Caldas con más de 20 mil habitantes y donde los mismos están ordenados con respecto a <code>Dep</code> y de mayor a menor con respecto a Poblacion."
+    "***data.frame*** con las variables <code>Departamento, Dep, Depmun, Municipio, Superficie y Poblacion</code> que incluye todos los municipios de los departamentos de Antioquia y Caldas con más de 20 mil habitantes y donde los mismos están ordenados con respecto a <code>Dep</code> y de mayor a menor con respecto a Poblacion."
    ]
   },
   {
@@ -4442,7 +4442,7 @@
     "<br>\n",
     "<h3>Ejemplo 2</h3>\n",
     "\n",
-    "<b><i>data.frame</b></i> con las variables <code>Departamento, Dep, Depmun, Municipio, Superficie y Poblacion</code> que incluye todos los municipios con superficies menores a $300 \\ km^2$  excepto los de Boyacá y Santander, y que están ordenados por <code>Dep</code> y de mayor a menor por Poblacion. Incluye una variable definida como <b><i>Baja</b></i> para los municipios con <code>denspobl</code> menor o igual a 30, <b><i>Alta</b></i> para los municipios con <code>denspobl</code> mayor a 85, y <b><i>Media</b></i> para los demás."
+    "***data.frame*** con las variables <code>Departamento, Dep, Depmun, Municipio, Superficie y Poblacion</code> que incluye todos los municipios con superficies menores a $300 \\ km^2$  excepto los de Boyacá y Santander, y que están ordenados por <code>Dep</code> y de mayor a menor por Poblacion. Incluye una variable definida como <b><i>Baja</b></i> para los municipios con <code>denspobl</code> menor o igual a 30, <b><i>Alta</b></i> para los municipios con <code>denspobl</code> mayor a 85, y <b><i>Media</b></i> para los demás."
    ]
   },
   {
@@ -4907,7 +4907,7 @@
     "<br>\n",
     "<h3>Ejemplo 6</h3>\n",
     "\n",
-    "<b><i>data.frame</b></i> con todos los departamentos, ordenados de mayor a menor con respecto a su población, que incluye la siguiente información: \n",
+    "***data.frame*** con todos los departamentos, ordenados de mayor a menor con respecto a su población, que incluye la siguiente información: \n",
     "\n",
     "+ Número de municipios\n",
     "+ Superficie\n",
@@ -5125,7 +5125,7 @@
     "<br>\n",
     "<h3>Ejemplo 8</h3>\n",
     "\n",
-    "<b><i>data.frame</b></i> con todos los departamentos, ordenados de mayor a menor con respecto a su población, que incluye la siguiente información: \n",
+    "***data.frame*** con todos los departamentos, ordenados de mayor a menor con respecto a su población, que incluye la siguiente información: \n",
     "\n",
     "+ Número de municipios\n",
     "+ Superficie, población\n",
@@ -5327,7 +5327,7 @@
     "<br>\n",
     "<h3>Ejemplo 10</h3>\n",
     "\n",
-    "<b><i>data.frame</b></i> con todos los departamentos con al menos 650 mil habitantes y al menos $ 10 \\ mil \\ km^2 $  de superficie, ordenados de mayor a menor con relación a su densidad poblacional, y que incluye la siguiente información: \n",
+    "***data.frame*** con todos los departamentos con al menos 650 mil habitantes y al menos $ 10 \\ mil \\ km^2 $  de superficie, ordenados de mayor a menor con relación a su densidad poblacional, y que incluye la siguiente información: \n",
     "\n",
     "+ Número de municipios\n",
     "+ Superficie\n",
@@ -5405,7 +5405,7 @@
     "<br>\n",
     "<h3>Ejemplo 11</h3>\n",
     "\n",
-    "<b><i>data.frame</b></i> con todos los departamentos con al menos 650 mil habitantes y al menos $ 10 \\ mil \\ km^2 $  de superficie, ordenados de mayor a menor con relación a su densidad poblacional, y que incluye la siguiente información: \n",
+    "***data.frame*** con todos los departamentos con al menos 650 mil habitantes y al menos $ 10 \\ mil \\ km^2 $  de superficie, ordenados de mayor a menor con relación a su densidad poblacional, y que incluye la siguiente información: \n",
     "\n",
     "+ Número de municipios\n",
     "+ Superficie\n",
@@ -5662,7 +5662,7 @@
     "<br>\n",
     "<h3>Ejemplo 14</h3>\n",
     "\n",
-    "<b><i>data.frame</b></i> con los municipios cuyos nombres inician con \"A\" o terminan con \"o\"."
+    "***data.frame*** con los municipios cuyos nombres inician con \"A\" o terminan con \"o\"."
    ]
   },
   {
@@ -5731,7 +5731,7 @@
     "<br>\n",
     "<h3>Ejemplo 15</h3>\n",
     "\n",
-    "<b><i>data.frame</b></i> con los municipios cuyos nombres inician con \"A\" y terminan con \"o\"."
+    "***data.frame*** con los municipios cuyos nombres inician con \"A\" y terminan con \"o\"."
    ]
   },
   {
@@ -5799,7 +5799,7 @@
     "<br>\n",
     "<h3>Ejemplo 16</h3>\n",
     "\n",
-    "<b><i>data.frame</b></i> con los municipios cuyo nombre tiene a la letra \"e\" en las posiciones 2 y 4."
+    "***data.frame*** con los municipios cuyo nombre tiene a la letra \"e\" en las posiciones 2 y 4."
    ]
   },
   {
@@ -5867,7 +5867,7 @@
     "<br>\n",
     "<h3>Ejemplo 16</h3>\n",
     "\n",
-    "<b><i>data.frame</b></i> con los municipios cuyos nombres constan de más de una palabra."
+    "***data.frame*** con los municipios cuyos nombres constan de más de una palabra."
    ]
   },
   {
@@ -6094,7 +6094,7 @@
     "<br>\n",
     "<h3>Ejemplo 19</h3>\n",
     "\n",
-    "<b><i>data.frame</b></i> con todos los municipios del país, que incluye una variable que informa el número de estaciones de monitoreo climático con que cuenta cada municipio.\n"
+    "***data.frame*** con todos los municipios del país, que incluye una variable que informa el número de estaciones de monitoreo climático con que cuenta cada municipio.\n"
    ]
   },
   {
